<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:text="@string/form_title"
            />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:hint="@string/hint_name"
            android:autofillHints="@string/hint_name"
            android:inputType="text" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/et_lastName"
            android:hint="@string/hint_lastName"
            android:autofillHints="@string/hint_lastName"
            android:inputType="text" />

        <EditText
            android:inputType="textEmailAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/et_email"
            android:hint="@string/hint_email"
            android:autofillHints="@string/hint_name"
            />

        <EditText
            android:inputType="phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/et_phone"
            android:hint="@string/hint_phone"
            android:autofillHints="@string/hint_phone"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/et_homeAddres"
            android:hint="@string/hint_homeAddress"
            android:autofillHints="@string/hint_homeAddress"
            android:inputType="text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="save"
            android:text="@string/text_button_save"
            />

        <Button
            android:id="@+id/bt_showCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="showCount"
            android:text="@string/text_button_show_count"
            android:visibility="gone"
            />
    </LinearLayout>
</ScrollView>